fix an error with the add task and center the wrapper to have better visibility of the task when working on it

--- a/modules/test.module.css
+++ b/modules/test.module.css
@@ -2,3 +2,9 @@
     height: 80vh;
     background-color: aliceblue;
 }
+
+.card {
+    max-width: 720px;
+    margin: 0 auto;
+    padding: 28px;
+}
